--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "redis": "^4.6.13",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   },
