--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,11 @@
     "helmet": "^7.0.0",
     "redis": "^4.6.13",
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
+    "@types/ws": "^8.5.10",
     "nodemon": "^3.0.1"
   }
 }
