--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon --watch src/**/*.ts --exec ts-node src/index.ts",
+    "start": "nodemon  --exec ts-node src/index.ts --watch src/**/*.ts",
     "build": "tsc"
   },
   "author": "Thorsten Licht, Jonas Herreiner",
